--- a/index.html
+++ b/index.html
@@ -12,11 +12,34 @@
 
 <body>
 
-  <div class="parent">
-    Parent
-    <div class="child">Child</div>
-  </div>
+  <header>
+    <h1 class="name">
+      <a href="#">Best City Guide</a>
+    </h1>
+    <nav>
+      <div><a href="">ice cream</a></div>
+      <div><a href="">donuts</a></div>
+      <div><a href="">tea</a></div>
+      <div><a href="">coffee</a></div>
+    </nav>
+  </header>
 
+  <main>
+    <h2>Welcome</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus autem modi aperiam delectus sint exercitationem, pariatur
+      ea, officia maiores distinctio eos ab reiciendis perferendis iure soluta dolor! Maxime, rem aut.</p>
+    <p>Dolorem aperiam natus aut facere nulla voluptate unde maiores. Nulla rerum architecto, illum nesciunt, voluptas consectetur
+      at fugiat sint vel dignissimos voluptates corrupti fugit suscipit numquam, sunt amet ipsa magni!</p>
+    <p>Porro odit nemo ratione distinctio illo debitis sunt laborum tempore consectetur quia aspernatur iusto a eum, provident
+      eius repudiandae minima! Quam magnam fugiat repellendus explicabo distinctio labore quasi qui. Qui!</p>
+    <h2>Great food</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus veritatis quas atque est dicta quisquam consequuntur,
+      beatae sequi ut vero consequatur omnis impedit, molestias et perferendis. Beatae repellendus nemo tenetur.</p>
+  </main>
+
+  <footer>
+    <span>&copy;2017 Residents of The Best City Ever</span>
+  </footer>
 
 </body>
 
