Adding mobile styles

--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 <body>
 
   <header>
-    <h1 class="name">
-      <a href="#">Best City Guide</a>
-    </h1>
-    <nav>
-      <div><a href="">ice cream</a></div>
-      <div><a href="">donuts</a></div>
-      <div><a href="">tea</a></div>
-      <div><a href="">coffee</a></div>
-    </nav>
+    <div class="wrapper">
+      <h1 class="name">
+        <a href="">Best City Guide</a>
+      </h1>
+      <nav>
+        <div><a href="">ice cream</a></div>
+        <div><a href="">donuts</a></div>
+        <div><a href="">tea</a></div>
+        <div><a href="">coffee</a></div>
+      </nav>
+    </div>
   </header>
 
   <main>
+
     <h2>Welcome</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus autem modi aperiam delectus sint exercitationem, pariatur
       ea, officia maiores distinctio eos ab reiciendis perferendis iure soluta dolor! Maxime, rem aut.</p>
@@ -32,10 +35,13 @@
       at fugiat sint vel dignissimos voluptates corrupti fugit suscipit numquam, sunt amet ipsa magni!</p>
     <p>Porro odit nemo ratione distinctio illo debitis sunt laborum tempore consectetur quia aspernatur iusto a eum, provident
       eius repudiandae minima! Quam magnam fugiat repellendus explicabo distinctio labore quasi qui. Qui!</p>
+
     <h2>Great food</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus veritatis quas atque est dicta quisquam consequuntur,
       beatae sequi ut vero consequatur omnis impedit, molestias et perferendis. Beatae repellendus nemo tenetur.</p>
+
   </main>
+
 
   <footer>
     <span>&copy;2017 Residents of The Best City Ever</span>
