--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 <body>
 
   <header>
-    <h1 class="name">
-      <a href="#">Best City Guide</a>
-    </h1>
-    <nav>
-      <a href="#">ice cream</a>
-      <a href="#">donuts</a>
-      <a href="#">tea</a>
-      <a href="#">coffee</a>
-    </nav>
+    <div class="container">
+      <h1 class="name">
+        <a href="#">Best City Guide</a>
+      </h1>
+      <nav>
+        <a href="#">ice cream</a>
+        <a href="#">donuts</a>
+        <a href="#">tea</a>
+        <a href="#">coffee</a>
+      </nav>
+    </div>
   </header>
 
   <div class="banner">
@@ -32,28 +34,35 @@
   </div>
 
   <main>
-    <h2>Welcome</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus autem modi aperiam delectus sint exercitationem, pariatur
-      ea, officia maiores distinctio eos ab reiciendis perferendis iure soluta dolor! Maxime, rem aut.</p>
-    <p>Dolorem aperiam natus aut facere nulla voluptate unde maiores. Nulla rerum architecto, illum nesciunt, voluptas consectetur
-      at fugiat sint vel dignissimos voluptates corrupti fugit suscipit numquam, sunt amet ipsa magni!</p>
-    <p>Porro odit nemo ratione distinctio illo debitis sunt laborum tempore consectetur quia aspernatur iusto a eum, provident
-      eius repudiandae minima! Quam magnam fugiat repellendus explicabo distinctio labore quasi qui. Qui!</p>
-    <h2>Great food</h2>
-    <img class="feat-img" src="img/treats.svg" alt="Drinks and eats">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus veritatis quas atque est dicta quisquam consequuntur,
-      beatae sequi ut vero consequatur omnis impedit, molestias et perferendis. Beatae repellendus nemo tenetur.</p>
-    <h2></h2>
-    <p><strong>Plane:</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem ab aperiam sunt, perferendis
-      ratione placeat laborum numquam? Dignissimos assumenda fugiat deserunt neque numquam minus at beatae commodi qui quam.</p>
-    <p><strong>Train:</strong> Ad illum esse harum consectetur, dignissimos maxime rerum eaque iste! Autem sapiente cum assumenda
-      expedita! Dolorem illo ut nesciunt error sed quidem quos voluptatum molestiae, consequuntur explicabo? Autem, quibusdam
-      molestias?
-    </p>
-    <p><strong>Car:</strong> Rerum incidunt laudantium laboriosam repudiandae neque et omnis deleniti ab molestias magnam, tenetur
-      assumenda recusandae unde impedit, numquam asperiores ullam soluta at veritatis facere? Alias cumque quod fugiat excepturi
-      ut?
-    </p>
+    <div class="welcome column">
+      <h2>Welcome</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus autem modi aperiam delectus sint exercitationem, pariatur
+        ea, officia maiores distinctio eos ab reiciendis perferendis iure soluta dolor! Maxime, rem aut.</p>
+      <p>Dolorem aperiam natus aut facere nulla voluptate unde maiores. Nulla rerum architecto, illum nesciunt, voluptas consectetur
+        at fugiat sint vel dignissimos voluptates corrupti fugit suscipit numquam, sunt amet ipsa magni!</p>
+      <p>Porro odit nemo ratione distinctio illo debitis sunt laborum tempore consectetur quia aspernatur iusto a eum, provident
+        eius repudiandae minima! Quam magnam fugiat repellendus explicabo distinctio labore quasi qui. Qui!</p>
+    </div>
+    <div class="food column">
+      <h2>Great food</h2>
+      <img class="feat-img" src="img/treats.svg" alt="Drinks and eats">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus veritatis quas atque est dicta quisquam consequuntur,
+        beatae sequi ut vero consequatur omnis impedit, molestias et perferendis. Beatae repellendus nemo tenetur.</p>
+    </div>
+    <div class="directions column">
+      <h2>How to get here</h2>
+      <p><strong>Plane:</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem ab aperiam sunt, perferendis
+        ratione placeat laborum numquam? Dignissimos assumenda fugiat deserunt neque numquam minus at beatae commodi qui
+        quam.</p>
+      <p><strong>Train:</strong> Ad illum esse harum consectetur, dignissimos maxime rerum eaque iste! Autem sapiente cum assumenda
+        expedita! Dolorem illo ut nesciunt error sed quidem quos voluptatum molestiae, consequuntur explicabo? Autem, quibusdam
+        molestias?
+      </p>
+      <p><strong>Car:</strong> Rerum incidunt laudantium laboriosam repudiandae neque et omnis deleniti ab molestias magnam,
+        tenetur assumenda recusandae unde impedit, numquam asperiores ullam soluta at veritatis facere? Alias cumque quod
+        fugiat excepturi ut?
+      </p>
+    </div>
   </main>
 
   <footer>
