--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
     </div>
     <div class="food column">
       <h2>Great food</h2>
-      <img class="feat-img" src="img/treats.svg" alt="Drinks and eats">
+      <figure>
+        <img class="icon-location" src="img/location.svg" alt="Location pin">
+        <img class="feat-img" src="img/treats.svg" alt="Drinks and eats">
+        <figcaption>
+          <h4>Featured Drinks & Eats</h4>
+          Croissant macaroon pie brownie cookie marshmallow liquorice gingerbread caramels toffee.
+        </figcaption>
+      </figure>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus veritatis quas atque est dicta quisquam consequuntur,
         beatae sequi ut vero consequatur omnis impedit, molestias et perferendis. Beatae repellendus nemo tenetur.</p>
     </div>
@@ -53,7 +60,8 @@
       <h2>How to get here</h2>
       <p><strong>Plane:</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem ab aperiam sunt, perferendis
         ratione placeat laborum numquam? Dignissimos assumenda fugiat deserunt neque numquam minus at beatae commodi qui
-        quam.</p>
+        quam.
+      </p>
       <p><strong>Train:</strong> Ad illum esse harum consectetur, dignissimos maxime rerum eaque iste! Autem sapiente cum assumenda
         expedita! Dolorem illo ut nesciunt error sed quidem quos voluptatum molestiae, consequuntur explicabo? Autem, quibusdam
         molestias?
